experiments-setup/experiments/exp02-autoscale-pod/ingress.yaml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: go-app.acme.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
           name: go-app
           port:
             number: 80

---

apiVersion: v1
kind: Service
metadata:
  name: go-app
  labels:
    app: go-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: go-app
